Added slight change to media.css file

--- a/styles/media.css
+++ b/styles/media.css
@@ -65,7 +65,7 @@
         height: 35.71%;
         line-height: 250px;
         display: inline-block;
-        background-color: pink;
+        background-color: lavender;
     }
 
     #boxI {
